--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,8 @@
 
 <script>
 
-    const apiEndpoint = 'http://localhost:8080/api/tickets/count';
+    const apiEndpoint = 'https://projektweb1-1.onrender.com/api/tickets/count';
+
 
 
     fetch(apiEndpoint)
