--- a/src/main/resources/static/ticket.html
+++ b/src/main/resources/static/ticket.html
@@ -58,7 +58,7 @@
 
 
         try {
-            const response = await fetch(`http://localhost:8080/api/tickets/view/${ticketId}`);
+            const response = await fetch(`https://projektweb1-1.onrender.com/api/tickets/view/${ticketId}`);
             const contentType = response.headers.get('content-type');
 
             if (contentType && contentType.indexOf('application/json') !== -1) {
