popravlejn id stranica

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -10,6 +10,7 @@
 <p>You need to login to view the ticket details.</p>
 
 
-<a href="/oauth2/authorization/auth0">Login with Auth0</a>
+<a href="https://projektweb1-1.onrender.com/oauth2/authorization/auth0">Login with Auth0</a>
+
 </body>
 </html>
